# tequilan

./: README.md  package-lock.json  package.json
backend/: Cargo.toml
backend/src/: main.rs
docs/: CNAME
frontend/: index.html
