[package]
name = "backend"
version = "0.1.0"
authors = ["Aleksander Vognild Burkow <aleksanderburkow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
rocket_contrib = "0.4.7"
serde = {version= "1.0.59", features=["derive"]}
serde_json = "1.0.59"
